<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">伏羲智能终端</string>
    <string name="action_settings">Settings</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="username_null">用户名不能为空</string>
    <string name="psw_null">密码不能为空</string>
    <string name="input_null">信息不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="net_error">连接等待中,请重试</string>
    <string name="net_no">当前无网络连接,请检查网络设置</string>
    <string name="loadTitle"><strong>正在提交数据</strong></string>
    <string name="LoadContent"><strong>加载中,请稍候……</strong></string>
    <string name="view_title_back">返回</string>
    <string name="ip_null">服务器地址不能为空</string>
    <string name="accountUserName_null">账套用户不能为空</string>
    <string name="accountPassword_null">账套密码不能为空</string>
    <string name="versionNumber_null">版本号不能为空</string>
    <string name="dept_null">请先选择部门</string>
    <string name="barcode_null">货品条码不能为空</string>
    <string name="customer_null">请先选择客户</string>
    <string name="type_null">请先选择类型</string>
    <string name="employee_null">请先选择经手人</string>
    <string name="qty_null">货品数量不能为空</string>
    <string name="illegal_quantity">货品数量不合法</string>
    <string name="qtysum_null">当前货品为空,请添加货品</string>

   <!-- pop菜单  -->
    <string name="menu_item1">菜单项1</string>
    <string name="menu_item2">菜单项2</string>
    <string name="menu_item3">菜单项3</string>
    <string name="menu_item4">菜单项4</string>
    <string name="menu_item5">菜单项5</string>


    <!-- 矢量图标 -->
    <string name="toggle">&#58968;</string>
    <string name="memo">&#59003;</string>
    <string name="print">&#59176;</string>
    <string name="complete">&#59446;</string>
    <string name="reset">&#59024;</string>
    <string name="add_new">&#58917;</string>
    <string name="check_update">&#59008;</string>
    <string name="more">&#58904;</string>
    <string name="exit">&#58898;</string>
    <string name="setting">&#58949;</string>
    <string name="history">&#58906;</string>
    <string name="problem">&#58936;</string>
    <string name="export">&#58908;</string>
    <string name="export_excel">&#58882;</string>
    <string name="screen">&#58911;</string>
    <string name="scan">&#58990;</string>
    <string name="other_option">&#58891;</string>
    <string name="list">&#59006;</string>
    <string name="discount">&#58929;</string>
    <string name="already_complete">&#59046;</string>
    <string name="day_end">&#59171;</string>
    <string name="position_setting">&#59106;</string>
    <string name="barcode_print">&#59035;</string>
    <string name="plus">&#59175;</string>
    <string name="subtract">&#58918;</string>
    <string name="noReturn">&#58937;</string>
    <string name="noQuery">&#58892;</string>
    <string name="base_info">&#58914;</string>
    <string name="different">&#58889;</string>
    <string name="picture">&#58888;</string>
    <string name="gift">&#58943;</string>
    <string name="daily_knots">&#58895;</string>
    <string name="system_setting">&#58890;</string>
    <string name="add_customer">&#58980;</string>
    <string name="purchase_manage">&#59007;</string>
    <string name="posSales_manage">&#58893;</string>
    <string name="inventory_sheet">&#58920;</string>
    <string name="out_line_inventory_sheet">&#58916;</string>
    <string name="goods_info">&#58963;</string>
    <string name="order_placing_meeting">&#58921;</string>
    <string name="move_shelves">&#58923;</string>
    <string name="packing_box">&#59018;</string>
    <string name="initial">&#58880;</string>
    <string name="allocation_shelves_out">&#58981;</string>
    <string name="allocation_shelves_in">&#58927;</string>
    <string name="sales_ticket">&#59010;</string>
    <string name="sales_manage">&#59485;</string>
    <string name="add">&#58928;</string>
    <string name="shelves_in">&#58884;</string>
    <string name="shelves_out">&#58885;</string>
    <string name="query">&#58883;</string>
    <string name="invoicing">&#58886;</string>
    <string name="inventory_query">&#58942;</string>
    <string name="purchase_return">&#58922;</string>
    <string name="purchase_in">&#58924;</string>
    <string name="sales_in">&#58925;</string>
    <string name="sales_return">&#58926;</string>
    <string name="warehouse_manage">&#58887;</string>
    <string name="sales_order">&#58894;</string>
    <string name="stock_move">&#58956;</string>
    <string name="position_manage">&#58938;</string>
    <string name="above">&#58912;</string>
    <string name="title_return">&#59410;</string>
    <string name="data_validate">&#59084;</string>
    <string name="position_distribution">&#58881;</string>
    <string name="stock_move_in">&#59004;</string>
    <string name="stock_move_out">&#59011;</string>
    <string name="stock_in">&#59048;</string>
    <string name="stock_out">&#59049;</string>
    <string name="inner_version">false</string>
    <string name="use_position">true</string>
    <string name="inner_ip">http://202.104.188.117:6080/pda</string>

</resources>